fix: adjust padding in content so theres a gap/footer space on the bottom

--- a/md_server/static/styles.css
+++ b/md_server/static/styles.css
@@ -42,7 +42,7 @@ main {
 }
 
 .content {
-  padding: 0 1.5rem 0 !important;
+  padding: 0 1.5rem 3rem !important;
 }
 
 p {
